--- a/KafkaBox/KafkaBox.csproj
+++ b/KafkaBox/KafkaBox.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="kafka-net" Version="0.9.0.65" />
+    <PackageReference Include="Confluent.Kafka" Version="1.9.2" />
   </ItemGroup>
 
 </Project>
